Scaling levels and moving stuff around a bit, ready to have mechanic tested

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=6
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Tilesets
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1078,6 +1078,23 @@ PaperTileMapComponent.Rendering=True
 PaperTileMapComponent.Tags=True
 PaperTileMapComponent.Activation=True
 PaperTileMapComponent.Cooking=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1106,7 +1123,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
-GenericImport=../../../../../../Desktop/FINAL/caveblock.png
+GenericImport=../../../../../../Desktop/FINAL/Flying.PNG
 GenericExport=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericOpen=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericSave=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -1805,13 +1822,13 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Tilesets/Cave7
-MRUItem1=/Game/Final/Tilesets/Cave6
-MRUItem2=/Game/Final/Tilesets/Cave5
-MRUItem3=/Game/Final/Tilesets/Cave4
-MRUItem4=/Game/Final/Tilesets/Cave2
-MRUItem5=/Game/Final/Tilesets/Cave1
-MRUItem6=/Game/Final/Tilesets/Cave3
+MRUItem0=/Game/Final/Tilesets/Cave3
+MRUItem1=/Game/Final/Tilesets/Cave4
+MRUItem2=/Game/Final/Tilesets/Cave2
+MRUItem3=/Game/Final/Tilesets/Cave5
+MRUItem4=/Game/Final/Tilesets/Cave7
+MRUItem5=/Game/Final/Tilesets/Cave6
+MRUItem6=/Game/Final/Tilesets/Cave1
 MRUItem7=/Game/Final/Tilesets/caveblock_TileSet
 MRUItem8=/Game/Final/Tilesets/cave_TileSet
 MRUItem9=/Game/Final/Tilesets/Trees1
@@ -1875,6 +1892,7 @@ WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Tent_Save_Sprite.Tent_Save_Sprite;
 RecentlyPlaced=/Game/Final/Tilesets/Cave7.Cave7;
 RecentlyPlaced=/Game/Final/Tilesets/Cave6.Cave6;
 RecentlyPlaced=/Game/Final/Tilesets/Cave5.Cave5;
@@ -1894,7 +1912,6 @@ RecentlyPlaced=/Game/Final/Tilesets/Trees1.Trees1;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 
 [SelectionDetails]
 PreserveScaleRatio=False
