--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1107,9 +1107,51 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+BP_SavePoint_C.Tick=True
+BP_SavePoint_C.Rendering=True
+BP_SavePoint_C.Replication=True
+BP_SavePoint_C.Input=True
+BP_SavePoint_C.Actor=True
+EdGraph.Graph=True
+BP_SavePoint_C.TransformCommon=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -1832,25 +1874,26 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Boss
-MRUItem1=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem2=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem3=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem4=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem5=/Game/Final/Enumerations/Boss
-MRUItem6=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem7=/Game/Final/Enumerations/FlyingEnemy
-MRUItem8=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem9=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem10=/Game/Final/Blueprint/BP_Fruit
-MRUItem11=/Game/Final/Blueprint/BP_Bullet
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem14=/Game/Final/Sprites/FB_Jumping
-MRUItem15=/Game/Final/Sprites/FB_Idle
-MRUItem16=/Game/Final/Blueprint/Maincharacter
-MRUItem17=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem18=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Blueprint/BP_SavePoint
+MRUItem2=/Game/Final/Sprites/Tent_Save_Sprite_0
+MRUItem3=/Game/Final/Sprites/Tent_Save
+MRUItem4=/Game/Final/Blueprint/BP_Boss
+MRUItem5=/Game/Final/Blueprint/BP_Boss_Tentacle
+MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem7=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
+MRUItem8=/Game/Final/Enumerations/Boss
+MRUItem9=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem10=/Game/Final/Enumerations/FlyingEnemy
+MRUItem11=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem12=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem13=/Game/Final/Blueprint/BP_Fruit
+MRUItem14=/Game/Final/Blueprint/BP_Bullet
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem17=/Game/Final/Sprites/FB_Jumping
+MRUItem18=/Game/Final/Sprites/FB_Idle
+MRUItem19=/Game/Final/Blueprint/Maincharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1869,6 +1912,7 @@ MRUItem18=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/Final/Blueprint/BP_Boss.BP_Boss=1
 /Game/Final/Tilesets/SpriteSheet_Trees_TileSet.SpriteSheet_Trees_TileSet=1
 /Game/Final/Blueprint/BP_Boss_Tentacle.BP_Boss_Tentacle=1
+/Game/Final/Blueprint/BP_SavePoint.BP_SavePoint=1
 
 [DetailPropertyExpansion]
 InputSettings=
@@ -1879,8 +1923,13 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/Final/Blueprint/BP_SavePoint.BP_SavePoint;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
@@ -1893,5 +1942,8 @@ PreserveScaleRatio=True
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
 DeleteVariableInUse_Warning=False
+
+[DetailCategoriesAdvanced]
+PaperSprite.Rendering=True
 
 
