--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1025,7 +1025,6 @@ REINST_BP_Maincharacter_C_47.Rendering=True
 REINST_BP_Maincharacter_C_47.Replication=True
 REINST_BP_Maincharacter_C_47.Input=True
 REINST_BP_Maincharacter_C_47.Actor=True
-<<<<<<< HEAD
 K2Node_InputAxisEvent.Input=True
 BP_Maincharacter_C.Character Movement: Jumping / Falling=True
 BP_Maincharacter_C.Character Movement (General Settings)=True
@@ -1138,7 +1137,8 @@ TriggerBox.Tags=True
 TriggerBox.Cooking=True
 TriggerBox.Input=True
 TriggerBox.Actor=True
-=======
+None=======
+None=======
 PaperTileSet.SingleTileEditor=True
 PaperTileMap.Tile Map=True
 PaperTileMap.SelectedLayer=True
@@ -1167,12 +1167,10 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
->>>>>>> origin/artwork
 Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
-<<<<<<< HEAD
 PostProcessVolume.TransformCommon=True
 PostProcessVolume.Color Grading=True
 PostProcessVolume.Film=True
@@ -1182,7 +1180,6 @@ PostProcessVolume.Rendering Features=True
 PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
-=======
 PaperSpriteComponent.TransformCommon=True
 PaperSpriteComponent.Sprite=True
 PaperSpriteComponent.Materials=True
@@ -1221,7 +1218,6 @@ StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
->>>>>>> origin/artwork
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1250,11 +1246,9 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
-<<<<<<< HEAD
 GenericImport=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/boss tentacle.png
-=======
 GenericImport=../../../../../../Desktop/FINAL/Flying.PNG
->>>>>>> origin/artwork
+None=======
 GenericExport=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericOpen=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericSave=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -1953,49 +1947,47 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
 MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem1=/Game/Final/Blueprint/BP_SavePoint
-MRUItem2=/Game/Final/Sprites/Tent_Save_Sprite_0
-MRUItem3=/Game/Final/Sprites/Tent_Save
-MRUItem4=/Game/Final/Blueprint/BP_Boss
-MRUItem5=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem7=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem8=/Game/Final/Enumerations/Boss
-MRUItem9=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem10=/Game/Final/Enumerations/FlyingEnemy
-MRUItem11=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem12=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem13=/Game/Final/Blueprint/BP_Fruit
-MRUItem14=/Game/Final/Blueprint/BP_Bullet
-MRUItem15=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem17=/Game/Final/Sprites/FB_Jumping
-MRUItem18=/Game/Final/Sprites/FB_Idle
-MRUItem19=/Game/Final/Blueprint/Maincharacter
-=======
 MRUItem0=/Game/Final/Tilesets/Cave3
+MRUItem1=/Game/Final/Blueprint/BP_SavePoint
 MRUItem1=/Game/Final/Tilesets/Cave4
+MRUItem2=/Game/Final/Sprites/Tent_Save_Sprite_0
 MRUItem2=/Game/Final/Tilesets/Cave2
+MRUItem3=/Game/Final/Sprites/Tent_Save
 MRUItem3=/Game/Final/Tilesets/Cave5
+MRUItem4=/Game/Final/Blueprint/BP_Boss
 MRUItem4=/Game/Final/Tilesets/Cave7
+MRUItem5=/Game/Final/Blueprint/BP_Boss_Tentacle
 MRUItem5=/Game/Final/Tilesets/Cave6
+MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
 MRUItem6=/Game/Final/Tilesets/Cave1
+MRUItem7=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
 MRUItem7=/Game/Final/Tilesets/caveblock_TileSet
+MRUItem8=/Game/Final/Enumerations/Boss
 MRUItem8=/Game/Final/Tilesets/cave_TileSet
+MRUItem9=/Game/Final/Blueprint/BP_Following_Boss
 MRUItem9=/Game/Final/Tilesets/Trees1
+MRUItem10=/Game/Final/Enumerations/FlyingEnemy
 MRUItem10=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem11=/Game/Final/Blueprint/BP_Enemy_Bullet
 MRUItem11=/Game/Final/Tilesets/Trees2
+MRUItem12=/Game/Final/Blueprint/BP_FlyingEnemy
 MRUItem12=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet1
+MRUItem13=/Game/Final/Blueprint/BP_Fruit
 MRUItem13=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet3
+MRUItem14=/Game/Final/Blueprint/BP_Bullet
 MRUItem14=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet2
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
 MRUItem15=/Game/Final/Tilesets/Trees4
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
 MRUItem16=/Game/Final/Tilesets/Trees3
+MRUItem17=/Game/Final/Sprites/FB_Jumping
 MRUItem17=/Game/Final/Tilesets/SpriteSheet_Ground_TileSet
+MRUItem18=/Game/Final/Sprites/FB_Idle
 MRUItem18=/Game/Final/Tilesets/Level1
+MRUItem19=/Game/Final/Blueprint/Maincharacter
 MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
->>>>>>> origin/artwork
+None=======
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -2013,10 +2005,9 @@ MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
 /Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
 /Game/Final/Blueprint/BP_Boss.BP_Boss=1
 /Game/Final/Tilesets/SpriteSheet_Trees_TileSet.SpriteSheet_Trees_TileSet=1
-<<<<<<< HEAD
 /Game/Final/Blueprint/BP_Boss_Tentacle.BP_Boss_Tentacle=1
 /Game/Final/Blueprint/BP_SavePoint.BP_SavePoint=1
-=======
+None=======
 /Game/Final/Tilesets/SpriteSheet_Trees_TileSet1.SpriteSheet_Trees_TileSet1=1
 /Game/Final/Tilesets/Level1.Level1=1
 /Game/Final/Tilesets/SpriteSheet_Ground_TileSet.SpriteSheet_Ground_TileSet=1
@@ -2034,7 +2025,6 @@ MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
 /Game/Final/Tilesets/Cave5.Cave5=1
 /Game/Final/Tilesets/Cave6.Cave6=1
 /Game/Final/Tilesets/Cave7.Cave7=1
->>>>>>> origin/artwork
 
 [DetailPropertyExpansion]
 InputSettings=
@@ -2045,7 +2035,6 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-<<<<<<< HEAD
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
@@ -2053,13 +2042,6 @@ RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Final/Blueprint/BP_SavePoint.BP_SavePoint;
-=======
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-Info="\"Object.Lightmass.LightmassSettings\" "
-
-[PlacementMode]
 RecentlyPlaced=/Game/Final/Sprites/Tent_Save_Sprite.Tent_Save_Sprite;
 RecentlyPlaced=/Game/Final/Tilesets/Cave7.Cave7;
 RecentlyPlaced=/Game/Final/Tilesets/Cave6.Cave6;
@@ -2077,10 +2059,14 @@ RecentlyPlaced=/Game/Final/Sprites/egg.egg;
 RecentlyPlaced=/Game/Final/Sprites/tentacle_Sprite_0.tentacle_Sprite_0;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Tilesets/Trees1.Trees1;
->>>>>>> origin/artwork
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
+None=======
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+WorldSettings="\"Object.Lightmass.LightmassSettings\" "
+Info="\"Object.Lightmass.LightmassSettings\" "
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2089,10 +2075,10 @@ PreserveScaleRatio=False
 ChangeVariableType_Warning=True
 DeleteVariableInUse_Warning=False
 
-<<<<<<< HEAD
 [DetailCategoriesAdvanced]
 PaperSprite.Rendering=True
-=======
+None=======
+
 [PluginBrowser]
 InstalledPlugins=Substance
 
@@ -2103,6 +2089,5 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=LightingResults
->>>>>>> origin/artwork
 
 
