--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=LAPTOP-7TT9GHAF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=315,Y=163)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=6
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Final/Tilesets
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1242,7 +1242,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -2038,6 +2038,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Tilesets/Trees2.Trees2;
+RecentlyPlaced=/Game/Final/Tilesets/Trees1.Trees1;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2053,15 +2055,9 @@ RecentlyPlaced=/Game/Final/Tilesets/Cave1.Cave1;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Final/Tilesets/Trees4.Trees4;
 RecentlyPlaced=/Game/Final/Tilesets/Trees3.Trees3;
-RecentlyPlaced=/Game/Final/Tilesets/Trees2.Trees2;
 RecentlyPlaced=/Game/Final/Sprites/egg_Sprite_0.egg_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/egg.egg;
 RecentlyPlaced=/Game/Final/Sprites/tentacle_Sprite_0.tentacle_Sprite_0;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Final/Tilesets/Trees1.Trees1;
-RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
-RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
-RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
 None=======
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
