Boss Health/Phases

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=6
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Tilesets
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1218,13 +1218,195 @@ StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+BP_Boss_C.TransformCommon=True
+BP_Boss_C.Sprite=True
+BP_Boss_C.Physics=True
+BP_Boss_C.Collision=True
+BP_Boss_C.Lighting=True
+BP_Boss_C.Tags=True
+BP_Boss_C.Activation=True
+BP_Boss_C.Cooking=True
+BP_Boss_C.Character Movement: Jumping / Falling=True
+BP_Boss_C.Character Movement (General Settings)=True
+BP_Boss_C.Character Movement: Walking=True
+BP_Boss_C.Character Movement: Swimming=True
+BP_Boss_C.Character Movement: Flying=True
+BP_Boss_C.Character Movement: Custom Movement=True
+BP_Boss_C.Character Movement (Rotation Settings)=True
+BP_Boss_C.Character Movement: Physics Interaction=True
+BP_Boss_C.Character Movement (Networking)=True
+BP_Boss_C.Character Movement=True
+BP_Boss_C.Character Movement: Avoidance=True
+BP_Boss_C.Character Movement: NavMesh Movement=True
+BP_Boss_C.RootMotion=True
+BP_Boss_C.NavMovement=True
+BP_Boss_C.Velocity=True
+BP_Boss_C.PlanarMovement=True
+BP_Boss_C.MovementComponent=True
+BP_Boss_C.Shape=True
+BP_Boss_C.Navigation=True
+BP_Boss_C.Materials=True
+BP_Boss_C.Variable=True
+BP_Boss_C.Sockets=True
+BP_Boss_C.ComponentReplication=True
+BP_Boss_C.Events=True
+REINST_BP_Boss_C_47.TransformCommon=True
+REINST_BP_Boss_C_47.Sprite=True
+REINST_BP_Boss_C_47.Physics=True
+REINST_BP_Boss_C_47.Collision=True
+REINST_BP_Boss_C_47.Lighting=True
+REINST_BP_Boss_C_47.Rendering=True
+REINST_BP_Boss_C_47.Tags=True
+REINST_BP_Boss_C_47.Activation=True
+REINST_BP_Boss_C_47.Cooking=True
+REINST_BP_Boss_C_47.Character=True
+REINST_BP_Boss_C_47.Character Movement: Jumping / Falling=True
+REINST_BP_Boss_C_47.Character Movement (General Settings)=True
+REINST_BP_Boss_C_47.Character Movement: Walking=True
+REINST_BP_Boss_C_47.Character Movement: Swimming=True
+REINST_BP_Boss_C_47.Character Movement: Flying=True
+REINST_BP_Boss_C_47.Character Movement: Custom Movement=True
+REINST_BP_Boss_C_47.Character Movement (Rotation Settings)=True
+REINST_BP_Boss_C_47.Character Movement: Physics Interaction=True
+REINST_BP_Boss_C_47.Character Movement (Networking)=True
+REINST_BP_Boss_C_47.Character Movement=True
+REINST_BP_Boss_C_47.Character Movement: Avoidance=True
+REINST_BP_Boss_C_47.Character Movement: NavMesh Movement=True
+REINST_BP_Boss_C_47.RootMotion=True
+REINST_BP_Boss_C_47.NavMovement=True
+REINST_BP_Boss_C_47.Velocity=True
+REINST_BP_Boss_C_47.PlanarMovement=True
+REINST_BP_Boss_C_47.MovementComponent=True
+REINST_BP_Boss_C_47.Shape=True
+REINST_BP_Boss_C_47.Navigation=True
+REINST_BP_Boss_C_47.Camera=True
+REINST_BP_Boss_C_47.Pawn=True
+REINST_BP_Boss_C_47.Input=True
+REINST_BP_Boss_C_47.Actor=True
+REINST_BP_Boss_C_47.Variable=True
+REINST_BP_Boss_C_47.Sockets=True
+REINST_BP_Boss_C_47.ComponentReplication=True
+REINST_BP_Boss_C_47.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+REINST_BP_Boss_C_51.Variable=True
+REINST_BP_Boss_C_51.TransformCommon=True
+REINST_BP_Boss_C_51.Sockets=True
+REINST_BP_Boss_C_51.Sprite=True
+REINST_BP_Boss_C_51.Materials=True
+REINST_BP_Boss_C_51.Physics=True
+REINST_BP_Boss_C_51.Collision=True
+REINST_BP_Boss_C_51.Lighting=True
+REINST_BP_Boss_C_51.Rendering=True
+REINST_BP_Boss_C_51.Tags=True
+REINST_BP_Boss_C_51.ComponentReplication=True
+REINST_BP_Boss_C_51.Activation=True
+REINST_BP_Boss_C_51.Cooking=True
+REINST_BP_Boss_C_51.Events=True
+REINST_BP_Boss_C_87.Variable=True
+REINST_BP_Boss_C_87.TransformCommon=True
+REINST_BP_Boss_C_87.Sockets=True
+REINST_BP_Boss_C_87.Shape=True
+REINST_BP_Boss_C_87.Navigation=True
+REINST_BP_Boss_C_87.Rendering=True
+REINST_BP_Boss_C_87.Physics=True
+REINST_BP_Boss_C_87.Collision=True
+REINST_BP_Boss_C_87.Tags=True
+REINST_BP_Boss_C_87.ComponentReplication=True
+REINST_BP_Boss_C_87.Cooking=True
+REINST_BP_Boss_C_87.Events=True
+REINST_BP_Boss_C_111.TransformCommon=True
+REINST_BP_Boss_C_111.Sprite=True
+REINST_BP_Boss_C_111.Physics=True
+REINST_BP_Boss_C_111.Collision=True
+REINST_BP_Boss_C_111.Lighting=True
+REINST_BP_Boss_C_111.Rendering=True
+REINST_BP_Boss_C_111.Tags=True
+REINST_BP_Boss_C_111.Activation=True
+REINST_BP_Boss_C_111.Cooking=True
+REINST_BP_Boss_C_111.Character=True
+REINST_BP_Boss_C_111.Character Movement: Jumping / Falling=True
+REINST_BP_Boss_C_111.Character Movement (General Settings)=True
+REINST_BP_Boss_C_111.Character Movement: Walking=True
+REINST_BP_Boss_C_111.Character Movement: Swimming=True
+REINST_BP_Boss_C_111.Character Movement: Flying=True
+REINST_BP_Boss_C_111.Character Movement: Custom Movement=True
+REINST_BP_Boss_C_111.Character Movement (Rotation Settings)=True
+REINST_BP_Boss_C_111.Character Movement: Physics Interaction=True
+REINST_BP_Boss_C_111.Character Movement (Networking)=True
+REINST_BP_Boss_C_111.Character Movement=True
+REINST_BP_Boss_C_111.Character Movement: Avoidance=True
+REINST_BP_Boss_C_111.Character Movement: NavMesh Movement=True
+REINST_BP_Boss_C_111.RootMotion=True
+REINST_BP_Boss_C_111.NavMovement=True
+REINST_BP_Boss_C_111.Velocity=True
+REINST_BP_Boss_C_111.PlanarMovement=True
+REINST_BP_Boss_C_111.MovementComponent=True
+REINST_BP_Boss_C_111.Shape=True
+REINST_BP_Boss_C_111.Navigation=True
+REINST_BP_Boss_C_111.Camera=True
+REINST_BP_Boss_C_111.Pawn=True
+REINST_BP_Boss_C_111.Input=True
+REINST_BP_Boss_C_111.Actor=True
+REINST_BP_Boss_C_111.Variable=True
+REINST_BP_Boss_C_111.Sockets=True
+REINST_BP_Boss_C_111.ComponentReplication=True
+REINST_BP_Boss_C_111.Events=True
+REINST_BP_Boss_C_125.Variable=True
+REINST_BP_Boss_C_125.TransformCommon=True
+REINST_BP_Boss_C_125.Sockets=True
+REINST_BP_Boss_C_125.Shape=True
+REINST_BP_Boss_C_125.Navigation=True
+REINST_BP_Boss_C_125.Rendering=True
+REINST_BP_Boss_C_125.Physics=True
+REINST_BP_Boss_C_125.Collision=True
+REINST_BP_Boss_C_125.Tags=True
+REINST_BP_Boss_C_125.ComponentReplication=True
+REINST_BP_Boss_C_125.Cooking=True
+REINST_BP_Boss_C_125.Events=True
+ProjectileMovementComponent.Collision=True
+REINST_BP_Boss_C_69.None=True
+REINST_BP_Boss_C_69.Tick=True
+REINST_BP_Boss_C_69.Character=True
+REINST_BP_Boss_C_69.Camera=True
+REINST_BP_Boss_C_69.Pawn=True
+REINST_BP_Boss_C_69.Rendering=True
+REINST_BP_Boss_C_69.Replication=True
+REINST_BP_Boss_C_69.Input=True
+REINST_BP_Boss_C_69.Actor=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=65.000 Y=42.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1880,6 +2062,8 @@ ExternalImagePicker.TimeStamp=2018.10.01-03.52.46
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.10.02-23.34.43
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.10.01-03.52.54
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1945,49 +2129,33 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
+BP_Boss_C=BP_Boss_C.Collision.Collision,
+K2Node_VariableGet=BP_Boss_C.Collision.Collision,
+K2Node_VariableSet=BP_Boss_C.Collision.Collision,
+BP_Boss_Tentacle_C=BP_Boss_C.Collision.Collision,
+Character=BP_Boss_C.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem0=/Game/Final/Tilesets/Cave3
-MRUItem1=/Game/Final/Blueprint/BP_SavePoint
-MRUItem1=/Game/Final/Tilesets/Cave4
-MRUItem2=/Game/Final/Sprites/Tent_Save_Sprite_0
-MRUItem2=/Game/Final/Tilesets/Cave2
-MRUItem3=/Game/Final/Sprites/Tent_Save
-MRUItem3=/Game/Final/Tilesets/Cave5
-MRUItem4=/Game/Final/Blueprint/BP_Boss
-MRUItem4=/Game/Final/Tilesets/Cave7
-MRUItem5=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem5=/Game/Final/Tilesets/Cave6
-MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem6=/Game/Final/Tilesets/Cave1
-MRUItem7=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem7=/Game/Final/Tilesets/caveblock_TileSet
-MRUItem8=/Game/Final/Enumerations/Boss
-MRUItem8=/Game/Final/Tilesets/cave_TileSet
-MRUItem9=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem9=/Game/Final/Tilesets/Trees1
-MRUItem10=/Game/Final/Enumerations/FlyingEnemy
-MRUItem10=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem11=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem11=/Game/Final/Tilesets/Trees2
-MRUItem12=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem12=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet1
-MRUItem13=/Game/Final/Blueprint/BP_Fruit
-MRUItem13=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet3
-MRUItem14=/Game/Final/Blueprint/BP_Bullet
-MRUItem14=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet2
-MRUItem15=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem15=/Game/Final/Tilesets/Trees4
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem16=/Game/Final/Tilesets/Trees3
-MRUItem17=/Game/Final/Sprites/FB_Jumping
-MRUItem17=/Game/Final/Tilesets/SpriteSheet_Ground_TileSet
-MRUItem18=/Game/Final/Sprites/FB_Idle
-MRUItem18=/Game/Final/Tilesets/Level1
-MRUItem19=/Game/Final/Blueprint/Maincharacter
-MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-None=======
+MRUItem0=/Game/Final/Blueprint/BP_Boss
+MRUItem1=/Game/Final/Widget/W_BossHealth
+MRUItem2=/Game/Final/Blueprint/BP_Boss_Tentacle
+MRUItem3=/Game/Final/Blueprint/BP_Bullet
+MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem5=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem6=/Game/Final/Tilesets/Cave3
+MRUItem7=/Game/Final/Tilesets/Cave4
+MRUItem8=/Game/Final/Tilesets/Cave2
+MRUItem9=/Game/Final/Tilesets/Cave5
+MRUItem10=/Game/Final/Tilesets/Cave7
+MRUItem11=/Game/Final/Tilesets/Cave6
+MRUItem12=/Game/Final/Tilesets/Cave1
+MRUItem13=/Game/Final/Tilesets/caveblock_TileSet
+MRUItem14=/Game/Final/Tilesets/cave_TileSet
+MRUItem15=/Game/Final/Tilesets/Trees1
+MRUItem16=/Game/Final/Tilesets/Trees2
+MRUItem17=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet1
+MRUItem18=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet3
+MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet2
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -2036,8 +2204,24 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BP_Boss_C=
+PaperCharacter=
+Character=
+Pawn=
+REINST_BP_Boss_C_111="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_BP_Boss_C_125="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+REINST_BP_Boss_C_131="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PaperFlipbookComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+BP_Maincharacter_C="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+REINST_BP_Maincharacter_C_177="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Boss.BP_Boss;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Tilesets/Trees2.Trees2;
 RecentlyPlaced=/Game/Final/Tilesets/Trees1.Trees1;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -2056,8 +2240,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Game/Final/Tilesets/Trees4.Trees4;
 RecentlyPlaced=/Game/Final/Tilesets/Trees3.Trees3;
 RecentlyPlaced=/Game/Final/Sprites/egg_Sprite_0.egg_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/egg.egg;
-RecentlyPlaced=/Game/Final/Sprites/tentacle_Sprite_0.tentacle_Sprite_0;
 None=======
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2085,5 +2267,24 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=LightingResults
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
